--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -6,8 +6,25 @@
         xmlns:local="clr-namespace:WpfApp"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" Background="Azure" >
-
-    <DockPanel>
+    
+    <DockPanel Background="Gray">
+        <TextBox DockPanel.Dock="Bottom" Margin="10">EditBox</TextBox>
+        <TextBox DockPanel.Dock="Top" Margin="10">EditBox</TextBox>
+        <Grid Background="DarkGray" Margin="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Button Background="Azure" Margin="10" Grid.Column="0">Button</Button>
+            <StackPanel Background="White" Margin="10" Grid.Column="1" VerticalAlignment="Center">
+                <Label Background="Red" Margin="10">Label</Label>
+                <Label Background="Green" Margin="10">Label</Label>
+                <Label Background="Blue" Margin="10">Label</Label>
+            </StackPanel>
+        </Grid>
+    </DockPanel>
+    
+    <!--<DockPanel>
 
         <Button DockPanel.Dock="Bottom" >Bottom</Button>
         <Button DockPanel.Dock="Left">Left</Button>
@@ -39,7 +56,7 @@
 
         </Grid>
 
-        <!--<StackPanel Orientation="Horizontal">-->
+        --><!--<StackPanel Orientation="Horizontal">--><!--
         <StackPanel >
             <Button>Stack Button</Button>
             <Button>Stack Button</Button>
@@ -47,10 +64,12 @@
             <Button>Stack Button</Button>
             <Button>Stack Button</Button>
             <Button>Stack Button</Button>
+            <TextBox/>
+            <Label Content="Label"/>
         </StackPanel>
 
         <WrapPanel >
-        <!--<WrapPanel Orientation="Vertical">-->
+        --><!--<WrapPanel Orientation="Vertical">--><!--
             <Button Padding="15">Wrap Button</Button>
             <Button Margin="15">Wrap Button</Button>
             <Button Margin="15,5,20,10">Wrap Button</Button>
@@ -62,5 +81,5 @@
         <Canvas Background="White">
             <Rectangle Width="25" Height="50" Fill="Red" Canvas.Top="175" Canvas.Left="-100" />
         </Canvas>
-    </DockPanel>
+    </DockPanel>-->
 </Window>
