--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -33,8 +33,9 @@
         </Grid>
 
         <DataGrid ItemsSource="{Binding People}" SelectedItem="{Binding SelectedPerson}" IsReadOnly="true" AutoGenerateColumns="False">
-        <DataGrid.Columns>
-            <DataGridTextColumn Header="{x:Static properties:Resources.FistName}" Binding="{Binding FirstName}"/>
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
+                <DataGridTextColumn Header="{x:Static properties:Resources.FistName}" Binding="{Binding FirstName}"/>
             <DataGridTextColumn Header="{x:Static properties:Resources.LastName}" Binding="{Binding LastName}"/>
             <DataGridComboBoxColumn Header="{x:Static properties:Resources.Gender}" ItemsSource="{Binding Source={StaticResource GenderEnum}}" SelectedValueBinding="{Binding Gender}"/>
             <!--<DataGridComboBoxColumn Header="{x:Static properties:Resources.Gender}" SelectedItemBinding="{Binding Gender}">
